[metadata]
name = pymusas
version = attr:pymusas.__version__
author = Andrew Moore
author_email = andrew.p.moore94@gmail.com
maintainer = Andrew Moore
maintainer_email = andrew.p.moore94@gmail.com
description = PYthon Multilingual Ucrel Semantic Analysis System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UCREL/pymusas
project_urls =
    Bug Tracker = https://github.com/UCREL/pymusas/issues
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = pymusas
zip_safe = false
python_requires = >=3.7
install_requires =
    spacy>=3.0
    tqdm>=4.50.0,<5.0.0
    requests>=2.13.0,<3.0.0

[options.extras_require]
tests = 
    pytest>=5.2.0
    pytest-cov
    responses
    mypy==0.910
    types-requests
    flake8>=3.8.0,<3.10.0
    pydoc-markdown>=4.0.0,<5.0.0

[flake8]
ignore = E266, E501, W503, W293
max-line-length = 200
select = B,C,E,F,W,T4,B9
exclude =
    resources
    benchmarks
    tests/data
    pymusas/rule_tagger_util.py
    test.py
statistics = true
count = true
show_source = true