[metadata]
name = pymusas
version = attr:pymusas.__version__
author = UCREL Research Centre
author_email = ucrel@lancaster.ac.uk
description = PYthon Multilingual Ucrel Semantic Analysis System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ucrel.github.io/pymusas/
project_urls =
    Source = https://github.com/UCREL/pymusas
license = Apache License 2.0
license_files =
    LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
include_package_data = True
zip_safe = false
python_requires = >=3.7
install_requires =
    click<8.1.0
    spacy>=3.1.4 ; python_version >= '3.10'
    spacy>=3.0 ; python_version < '3.10'
    srsly>=2.4.1,<3.0.0
    tqdm>=4.50.0,<5.0.0
    requests>=2.13.0,<3.0.0

[options.packages.find]
exclude=
    *.tests
    *.tests.*
    tests.*
    tests

[options.package_data]
* = py.typed

[options.extras_require]
tests = 
    pytest>=6.0.0
    coverage[toml]>=6.0.0
    responses>=0.16.0
    mypy==0.910
    types-requests
    flake8>=3.8.0,<3.10.0
    pydoc-markdown>=4.0.0,<4.6.0
    isort>=5.5.4

[flake8]
ignore = E266, E501, W503, W293
max-line-length = 200
select = B,C,E,F,W,T4,B9
exclude =
    resources
    benchmarks
    tests/data
    pymusas/rule_tagger_util.py
    test.py
statistics = true
count = true
show_source = true